--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^1.8.0",
     "express": "^4.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "firebase": "4.2.0",
@@ -52,7 +53,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "chalk": "^4.0.0",
     "cross-env": "5.0.5",
-    "dotenv": "4.0.0",
+    "dotenv": "^8.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "3.0.1",
